feat: Add SAML disableRequestedAuthnContext option
Co-authored-by: david.frazer <david.frazer@vizius.com>

--- a/.env.example
+++ b/.env.example
@@ -530,6 +530,9 @@ SAML_IMAGE_URL=
 # - If "false" or unset, only the `SAML Assertion` will be signed (default behavior).
 # SAML_USE_AUTHN_RESPONSE_SIGNED=
 
+# Set to true to stop requesting a specific AuthnContext (useful for MFA or smartcard flows).
+SAML_DISABLE_REQUESTED_AUTHN_CONTEXT=
+
 
 #===============================================#
 # Microsoft Graph API / Entra ID Integration  #
